2014-11-27  Ben Finney  <ben+python@benfinney.id.au>

    * Use ‘pydoc.splitdoc’ to get package description text.
    * Remove ASCII translation of package description, not needed now the
      docstring is a proper Unicode text value.
    * Move package metadata to ‘daemon/_metadata.py’.
    * Move version string to a plain-text data file, ‘VERSION’.

2014-08-05  Ben Finney  <ben+python@benfinney.id.au>

    * Update package homepage to Alioth hosted project page.

2014-08-04  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.6.1 released.

2014-08-01  Ben Finney  <ben+python@benfinney.id.au>

    * Use unambiguous “except FooType as foo” syntax.
      This is to ease the port to Python 3, where the ambiguous comma
      usage is an error.
    * Ensure a ‘basestring’ name bound to the base type for strings.
      This is to allow checks to work on Python 2 and 3.
    * Specify versions of Python supported, as trove classifiers.

2014-05-20  Ben Finney  <ben+python@benfinney.id.au>

    * Update copyright notices.
    * Add editor hints for most files.
    * Distinguish continuation-line indentation versus block indentation.

2012-05-30  Ben Finney  <ben+python@benfinney.id.au>

    * Use unicode literals by default, specifying bytes where necessary.
      This is to ease the port to Python 3, where the string type is
      unicode.
    * Update copyright notices.
    * Update the GPL license file to version 3, as declared in our
      copyright notices.

2011-07-02  Ben Finney  <ben+python@benfinney.id.au>

    * Change license of library code to Apache License 2.0. Rationale at
      <URL:http://wiki.python.org/moin/PythonSoftwareFoundationLicenseFaq#Contributing_Code_to_Python>.

2010-05-10  Ben Finney  <ben+python@benfinney.id.au>

    Version 1.6 released.

    * Use absolute imports to disambiguate provenance of names.
    * setup.py: Require ‘lockfile >=0.9’.
    * daemon/pidfile.py: Renamed from ‘daemon/pidlockfile.py’. Change