@@ -14,7 +14,20 @@
 
 from __future__ import (absolute_import, unicode_literals)
 
+import pkg_resources
+
 from ._version_info import version_info
+
+
+distribution_name = "python-daemon"
+try:
+    distribution = pkg_resources.get_distribution(distribution_name)
+except pkg_resources.DistributionNotFound:
+    distribution = None
+
+version_installed = None
+if distribution is not None:
+    version_installed = distribution.version
 
 author_name = "Ben Finney"
 author_email = "ben+python@benfinney.id.au"
